# aeon-api

./: .env  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  aeon-api.json  docker-compose.develop.yml  makefile  pyproject.toml  readme.md
.github/workflows/: build-system.yml  full.yml  variables.yml
src/: main.py
test/: conftest.py  test_main.py
